[gd_scene load_steps=34 format=3 uid="uid://qhl6r2tbil5t"]

[ext_resource type="PackedScene" uid="uid://dilk21k2nncq2" path="res://scenes/levels/level_template.tscn" id="1_ttjsf"]
[ext_resource type="PackedScene" uid="uid://dfrum4te4lpmr" path="res://scenes/objects/teleporter.tscn" id="2_8o713"]
[ext_resource type="Script" path="res://scripts/levels/hell_area.gd" id="2_myijk"]
[ext_resource type="PackedScene" uid="uid://41p1qgrud4ej" path="res://scenes/components/terrain_generator.tscn" id="2_p0a1o"]
[ext_resource type="PackedScene" uid="uid://ugulpxhu6v48" path="res://scenes/components/pickup_handler.tscn" id="3_be7sf"]
[ext_resource type="Resource" uid="uid://dh8xipsw2bu5w" path="res://resources/enemy/demon_skull.tres" id="3_dr1lv"]
[ext_resource type="Resource" uid="uid://doalqpgaptgxa" path="res://resources/enemy/demon_dog.tres" id="4_j7txi"]
[ext_resource type="PackedScene" uid="uid://cjuw1uddg4foi" path="res://scenes/objects/pickup.tscn" id="4_rcjv7"]
[ext_resource type="PackedScene" uid="uid://cnrpegq0voiht" path="res://scenes/components/enemy_handler.tscn" id="5_qh5by"]
[ext_resource type="Resource" uid="uid://bqyg0clrpkdim" path="res://resources/enemy/demon_skeleton.tres" id="5_yiyg4"]
[ext_resource type="Resource" uid="uid://djjvchiit0f0n" path="res://resources/enemy/angel_worshipper.tres" id="6_7qtbu"]
[ext_resource type="PackedScene" uid="uid://bxmk1htarl4v5" path="res://scenes/components/shop_handler.tscn" id="6_tokbn"]
[ext_resource type="Texture2D" uid="uid://dvrx1ijrwk8a2" path="res://art/backgrounds/hell_level_1.png" id="10_dov0s"]
[ext_resource type="PackedScene" uid="uid://cnepphpba8e8u" path="res://scenes/characters/player.tscn" id="11_syo0k"]
[ext_resource type="PackedScene" uid="uid://cx84pw0whxyxq" path="res://scenes/UI/ember_particles.tscn" id="12_ffkww"]
[ext_resource type="PackedScene" uid="uid://j8g4suxt2pa2" path="res://scenes/objects/mountain_large.tscn" id="14_kq46c"]
[ext_resource type="PackedScene" uid="uid://cu0upewcndo61" path="res://scenes/objects/mountain_small.tscn" id="15_oeqij"]
[ext_resource type="PackedScene" uid="uid://7pekoii3l4xw" path="res://scenes/objects/pillar.tscn" id="16_48wth"]
[ext_resource type="PackedScene" uid="uid://b2tef800ecm8u" path="res://scenes/components/weapon_handler.tscn" id="17_gx7j2"]
[ext_resource type="PackedScene" uid="uid://c0sja3tghmci5" path="res://scenes/objects/hell_roots.tscn" id="17_kyh5d"]
[ext_resource type="PackedScene" uid="uid://bk5hh7qxofgw5" path="res://scenes/objects/pillar_broken.tscn" id="18_uw2ke"]
[ext_resource type="PackedScene" uid="uid://d2qk4vahd2ews" path="res://scenes/objects/bones.tscn" id="19_omeqv"]
[ext_resource type="Resource" uid="uid://cde86qx4smawg" path="res://resources/enemy/demon_lord.tres" id="21_jliye"]
[ext_resource type="PackedScene" uid="uid://be4i0yo3jsk42" path="res://scenes/components/attack.tscn" id="23_6mnt7"]
[ext_resource type="Resource" uid="uid://coqyd5d8e6rm8" path="res://resources/bullets/player/particle_mace.tres" id="24_8ykrw"]
[ext_resource type="Resource" uid="uid://b3v62pkd6hntd" path="res://resources/bullets/player/shotgun.tres" id="25_v7jer"]
[ext_resource type="Resource" uid="uid://8ogmebrr77xx" path="res://resources/bullets/player/black_hole.tres" id="26_klscm"]
[ext_resource type="Resource" uid="uid://cyahshf3y21ai" path="res://resources/bullets/player/boomerang.tres" id="27_iw6vn"]
[ext_resource type="Resource" uid="uid://dgv7ken3yi2xv" path="res://resources/bullets/player/laser.tres" id="28_fjm00"]
[ext_resource type="Resource" uid="uid://cttw5mxt1sn0l" path="res://resources/bullets/player/orbital_laser.tres" id="29_w0nb2"]
[ext_resource type="Resource" uid="uid://cnwaewfb52b8q" path="res://resources/bullets/player/forcefield.tres" id="30_l8qwc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e30b7"]
texture = ExtResource("10_dov0s")
texture_region_size = Vector2i(1920, 1080)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_rqhpw"]
tile_size = Vector2i(1920, 1080)
sources/1 = SubResource("TileSetAtlasSource_e30b7")

[node name="Hell Area" node_paths=PackedStringArray("enemy_handler") instance=ExtResource("1_ttjsf")]
script = ExtResource("2_myijk")
enemy_handler = NodePath("LogicComponents/EnemyHandler")
metadata/_edit_vertical_guides_ = []

[node name="TileMap" type="TileMap" parent="YSort" index="0"]
z_index = -2
scale = Vector2(0.8, 0.8)
tile_set = SubResource("TileSet_rqhpw")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0)

[node name="PlayerStart" parent="YSort" index="1"]
position = Vector2(0, 0)

[node name="Player" parent="YSort" index="2" instance=ExtResource("11_syo0k")]
y_sort_enabled = false
STARTING_HP_MAX = 20.0

[node name="teleporter" parent="YSort" index="3" node_paths=PackedStringArray("HUD") instance=ExtResource("2_8o713")]
destination = 1
HUD = NodePath("../../HUD")

[node name="ember_particles" parent="." index="2" instance=ExtResource("12_ffkww")]
z_index = 19

[node name="TerrainGenerator" parent="LogicComponents" index="1" node_paths=PackedStringArray("tile_map", "ysorter") instance=ExtResource("2_p0a1o")]
tile_map = NodePath("../../YSort/TileMap")
ysorter = NodePath("../../YSort")
objects = Array[PackedScene]([ExtResource("14_kq46c"), ExtResource("15_oeqij"), ExtResource("16_48wth"), ExtResource("17_kyh5d"), ExtResource("18_uw2ke"), ExtResource("19_omeqv")])
object_spawn_rate = Array[float]([0.3, 0.2, 0.5, 0.4, 0.3, 0.1])

[node name="PickupHandler" parent="LogicComponents" index="2" node_paths=PackedStringArray("ysorter", "score_display") instance=ExtResource("3_be7sf")]
pickup_scene = ExtResource("4_rcjv7")
ysorter = NodePath("../../YSort")
score_display = NodePath("../../HUD")

[node name="EnemyHandler" parent="LogicComponents" index="3" node_paths=PackedStringArray("enemy_ysort") instance=ExtResource("5_qh5by")]
enemy_resource_list = Array[Resource("res://scripts/characters/enemy_resource.gd")]([ExtResource("3_dr1lv"), ExtResource("4_j7txi"), ExtResource("5_yiyg4"), ExtResource("21_jliye"), ExtResource("6_7qtbu")])
enemy_ysort = NodePath("../../YSort")

[node name="ShopHandler" parent="LogicComponents" index="4" node_paths=PackedStringArray("enemy_handler", "ysorter", "objective_marker", "shop_node", "teleporter") instance=ExtResource("6_tokbn")]
attack_scene = ExtResource("23_6mnt7")
default_shop_weapons_list = Array[Resource("res://scripts/objects/bullet_resource.gd")]([ExtResource("24_8ykrw"), ExtResource("25_v7jer"), ExtResource("26_klscm"), ExtResource("27_iw6vn"), ExtResource("28_fjm00"), ExtResource("29_w0nb2"), ExtResource("30_l8qwc")])
enemy_handler = NodePath("../EnemyHandler")
ysorter = NodePath("../../YSort")
objective_marker = NodePath("../../ObjectiveMarker")
shop_node = NodePath("../../ShopAlt")
teleporter = NodePath("../../YSort/teleporter")

[node name="WeaponHandler" parent="LogicComponents" index="5" node_paths=PackedStringArray("ysorter") instance=ExtResource("17_gx7j2")]
ysorter = NodePath("../../YSort")

[connection signal="credit_player" from="YSort/Player" to="LogicComponents/PickupHandler" method="_on_pickup_credit_player"]
[connection signal="hp_changed" from="YSort/Player" to="HUD" method="show_health"]
[connection signal="level_up" from="YSort/Player" to="." method="_on_player_level_up"]
[connection signal="player_death" from="YSort/Player" to="." method="_on_player_player_death"]
[connection signal="show_freeze" from="YSort/Player" to="HUD" method="freeze"]
[connection signal="show_freeze" from="YSort/Player" to="LogicComponents/EnemyHandler" method="freeze"]
[connection signal="add_objective_marker" from="YSort/teleporter" to="ObjectiveMarker" method="add_target"]
[connection signal="teleport_player" from="YSort/teleporter" to="." method="teleport_to_heaven_area"]
[connection signal="start_enemy_and_magic" from="HUD" to="." method="start_enemy_handler_and_magic_circles"]
[connection signal="restart_game" from="stat_screen" to="." method="on_restart_game"]
